jre and exe in progress