@@ -7,6 +7,7 @@
 	<groupId>groupId</groupId>
 	<artifactId>Minesweeper</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<build>
 		<plugins>
 			<plugin>
@@ -65,11 +66,122 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<!-- Build an executable JAR -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>sample.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<!-- Wraps the project jar into an .exe -->
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<version>1.7.25</version>
+				<executions>
+					<execution>
+						<id>jar-to-exe</id>
+						<phase>package</phase>
+						<goals>
+							<goal>launch4j</goal>
+						</goals>
+						<configuration>
+							<headerType>gui</headerType>
+							<stayAlive>true</stayAlive>
+
+							<manifest>
+								${project.basedir}/src/main/resources/MANIFEST.MF
+							</manifest>
+							<jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
+							<outfile>${project.build.directory}/${project.build}.exe</outfile>
+							<classPath>
+								<!-- The main class to invoke on executing the .exe -->
+								<mainClass>sample.MainWrapper</mainClass>
+							</classPath>
+							<jre>
+								<!--								<minVersion>14</minVersion>-->
+								<jdkPreference>preferJre</jdkPreference>
+
+								<!-- Relative path to the JRE in the final zip bundle, to launch the exe/jar-->
+								<path>lib/jdk</path>
+
+								<!-- Runtime arguments -->
+								<opts>
+									<!--									 Run time arguments can be passed using <opt> as below -->
+									<!--									<opt>-Dparam=value</opt>-->
+									<opt>--add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</opt>
+								</opts>
+
+							</jre>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Bundles the .exe and JRE in a zip file -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.3.0</version>
+				<executions>
+					<execution>
+						<!-- Bundle the .exe and jre into a final release zip -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<addClasspath>true</addClasspath>
+									<mainClass>sample.MainWrapper</mainClass>
+								</manifest>
+							</archive>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptors>
+								<!-- Defines the files that need to be bundled in the final zip-->
+								<descriptor>${project.basedir}/src/main/resources/assembly.xml</descriptor>
+							</descriptors>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<manifestEntries>
+										<Main-Class>sample.MainWrapper</Main-Class>
+										<Build-Number>1.0</Build-Number>
+									</manifestEntries>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<properties>
 		<maven.compiler.source>14</maven.compiler.source>
 		<maven.compiler.target>14</maven.compiler.target>
+		<sys.java.home>${env.JAVA_HOME}</sys.java.home>
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
